# AutoBrep

./: LICENSE  README.md
configs/: autobrep.yaml  sample.json
core/: dev-env.yaml  pyproject.toml
core/src/autobrep/: network.py  point_grid_visualizer.py  train.py  utils.py
core/src/autobrep/data/: abc_data.py  serialize.py  simple_point_grid_data_file.py  token_mapping.py
core/src/autobrep/inference/: brepgen_brep_builder.py  inference_common.py  post_process.py  sample_ar.py
core/src/autobrep/models/: autoregressive.py  autoregressive_samplers.py  dataclass.py  fsq.py  vaes.py
scripts/: sample.sh  train.sh
